Added "potential problems" modules for server and satellite and injected them into the hardware overview
git-svn-id: svn://dunari.cis.vtc.edu/POWER@137 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -22,7 +22,8 @@ Figure \ref{SystemOverview} shows the layout of the hardware system.
 \section{The Server}
 \input{Hardware/Server-Hardware}
 \input{Hardware/Server-Addons}
-%\input{Hardware/Server-TalkToXbee}
+\input{Hardware/Server-TalkToXbee}
+\input{Hardware/Server-Problems}
 
 \section{The Satellites}
 The Satellites are made up of two sets of hardware: 
@@ -32,3 +33,4 @@ However, it should be noted that prototyping will most likely involve all of the
 \input{Hardware/Satellite-Circuit}
 \input{Hardware/Satellite-Hardware}
 \input{Hardware/Satellite-ZigBee}
+\input{Hardware/Satellite-Problems}
