--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -7,11 +7,12 @@
 
 The POW-R project is comprised of two main hardware components, the Server and the Satellites. 
 The Server refers to the physical hardware from which the Display shall be served. 
-It also acts as the data center for all Satellites associated to it, collecting data and administrating. 
+It also acts as the data center for all Satellites associated to it, collecting data and storing it in a hard drive. 
 The Satellites will talk over ZigBee specification to the one Zigbee module connected to the Server. 
 That one Zigbee module can talk to the Server over Universal Serial Bus (USB).
  
 Figure \ref{SystemOverview} shows the layout of the hardware system.
+
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.3]{Hardware/images/SystemOverview.png}
