--- a/Documents/Design/Hardware/Satellite-Hardware.tex
+++ b/Documents/Design/Hardware/Satellite-Hardware.tex
@@ -2,25 +2,20 @@
 
 \subsection{Communications Hardware}
 
-% Describe hardware setup for our
-% XBee modules
-
 For the communication between the Server and the Satellites,
 we will be using the Xbee Series 2 Radio Modules.
 
 \subsubsection{XBee Series 2 Radio Modules}
 
-% Might want to mention we want series 2 for
-% Zigbee, but ZigBee has it's own module since
-% it's a fairly large part of this design
+The XBee Series 2 Radio Module is configured to be running
+the Zigbee mesh firmware. We chose this module because of it's
+low current draw. When configured as an end device, it draws at
+most 40 mA. In addition to it's low power draw, it also has a 
+considerable indoor transmit range of 133 ft.
 
 \subsubsection{Interface Board}
 
-% This section is a little vague at the moment.
-% Currently we're using Digi Interface Boards,
-% but we may need to move to an Arduino if these
-% boards lack an A/D converter pin. Haven't
-% looked into it yet. In either case, whatever
-% interface board we use will connect the
-% measuring circuit to the radio. Might
-% need diagram for this.
+The Digi Interface board is the interface board that we will
+be using to connect to the Xbee Series 2 Radio Modules. We 
+chose this due to it's simplicity in communicating with the
+Modules.
