--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -7,9 +7,10 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to view various pieces of data in various formats.
 
-The View Data front end is responsible for providing the user with data regarding each device and device group. 
+The View Data front end is responsible for providing the user with data regarding each Device and Device Group. 
 It will provide three separate graphs and tables with data specified by the user; 
 Device Power Consumption, Monthly Power Consumption, and Power Consumption Over Time. 
+
 This module will be using jqPlot to render the graphs on the web page. 
 This will allow the back end to provide the data for the content and the front end to plot the graphs as needed. 
 
@@ -31,3 +32,19 @@ We will be facing a large learning curve as we must familiarize ourselves with t
 There is also the problem where some users will not have Javascript supported in their browsers. 
 This will keep them from being able to view any of the information presented by this module using Javascript or jqPlot. 
 These problems have been addressed previously. 
+
+\subsubsection{Sub-modules}
+Device Power Consumption:
+This is a table that will contain the name, current power consumption, and average power consumption rate of each selected Device or Device Group. 
+The content will be sortable by each field.
+
+Monthly Power Consumption:
+This is a graph with power in watts on the vertical axis and time in months on the horizontal axis. 
+The user will specify which Devices or Device Groups and the range of months they would like to view data for. 
+The graph will then display a line graph with a separate lines for each separate Device, showing the power usage over time. 
+
+Power Consumption Over Time:
+This is a graph that allows the user to specify not only the Devices and Device Groups to view, but the time interval as well. 
+The user will specify whether time, on the horizontal axis, will be measured in days, weeks, months, quarters or years. 
+The units of the vertical axis will be power in watts. 
+The graph will then display a line graph with separate lines for each separate Device, showing the power usage over time. 
