I just finished up a few more pages, if someone could look them over that would be great
git-svn-id: svn://dunari.cis.vtc.edu/POWER@145 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-FactoryReset.tex
+++ b/Documents/Design/Software/Backend-FactoryReset.tex
@@ -30,5 +30,5 @@ The script will also restore grub, so we don't have to worry about returning tha
 \subsubsection{Potential Problems}
 
 One of the biggest risks here is failing to boot into the restore partition and ruining our grub configuration.
-This would cause the customer to need to send us back the back, we would have to flash it, and send it back.
+This would cause the customer to need to send us back the unit, we would have to flash it, and send it back.
 If we can get this feature working however, we will not have to worry so much about breaking the web UI by accident.
