--- a/Documents/Design/Software/Frontend-PowerBillGuestimator.tex
+++ b/Documents/Design/Software/Frontend-PowerBillGuestimator.tex
@@ -7,30 +7,19 @@
 
 This module describes the architecture of how the frontend will create pages that allow the user to view guestimates of their monthly power bill, in various scenarios.
 
+It will receive a basic framework for the web pages in HTML from the back end module and use Javascript to render the rest of the page. 
+The pages will be created with a mix of HTML and CSS from the back end and heavy Javascript from this module. 
+
 \subsubsection{Program Flow}
 
-% Insert a flow chart here with a high-level look
-%  at the states this part of the system goes through
+When the user would like to estimate a power bill they first have to select what devices they want to view and for what time period.
+With that information selected, this module asks the backend for the power cost data for said devices.
 
-\subsubsection{Data Flow}
+When the user is modifiying the utility company rates they will be presented with a wizard that ill guide them through inputting them.
+This wizard will ask them several questions about how the utility company charges for power and will give data to the backend accordingly.
 
-% Describe where data goes and comes from in this subsubsection
-% Flow charts are encouraged
-
-\subsubsection{UML Diagrams}
-
-% Any diagrams that can describe the system design
-%  Such as inheritance and actors
 
 \subsubsection{Potential Problems}
 
-% A list of potentional programs along with suggestions
-%  on ways to work around them.
-Elaborate on why the problem
-%  exists
-
-\subsubsection{Sub-modules 1}
-
-% This is a second subsubsection of modules,
-%  and should consists of this module broken 
-%  down further into components
+One potential problem is having a utility company have rates change in a way we did not anticipate.
+One other issue is not having rates defined before trying to calculate the bill.
