--- a/Documents/Design/Software/Frontend-ViewData.tex
+++ b/Documents/Design/Software/Frontend-ViewData.tex
@@ -14,7 +14,6 @@ Device Power Consumption, Monthly Power Consumption, and Power Consumption Over 
 This module will be using jqPlot to render the graphs on the web page. 
 This will allow the back end to provide the data for the content and the front end to plot the graphs as needed. 
 
-
 \subsubsection{Program Flow}
 
 From the Home page the user will be able to select which graph or table they would like to view.  
@@ -34,16 +33,16 @@ This will keep them from being able to view any of the information presented by 
 These problems have been addressed previously. 
 
 \subsubsection{Sub-modules}
-Device Power Consumption:
+Device Power Consumption: \\
 This is a table that will contain the name, current power consumption, and average power consumption rate of each selected Device or Device Group. 
 The content will be sortable by each field.
 
-Monthly Power Consumption:
+Monthly Power Consumption: \\
 This is a graph with power in watts on the vertical axis and time in months on the horizontal axis. 
 The user will specify which Devices or Device Groups and the range of months they would like to view data for. 
 The graph will then display a line graph with a separate lines for each separate Device, showing the power usage over time. 
 
-Power Consumption Over Time:
+Power Consumption Over Time: \\
 This is a graph that allows the user to specify not only the Devices and Device Groups to view, but the time interval as well. 
 The user will specify whether time, on the horizontal axis, will be measured in days, weeks, months, quarters or years. 
 The units of the vertical axis will be power in watts. 
