--- a/Documents/Design/Hardware/Server-Addons.tex
+++ b/Documents/Design/Hardware/Server-Addons.tex
@@ -49,7 +49,7 @@ The subsections below are buttons that the Server must have, and each of these b
 A standard rocker switch will be added to the case to provide the user with a way to turn the Server on and off. 
 The style of the switch will clearly signify "On" or "Off".
 
-\subsubsection{Factory Reset*}
+\subsubsection{Factory Reset\repeatfootnote{opt}}
 This button should intentionally be placed somewhere inconvenient: 
 Sunken into the case far enough that you need a skinny rod (such as a paperclip) to push it, and in a spot
 that chaotic forces (children, mean people, God's divine will) will not notice it.
