--- a/Documents/Design/Introduction.tex
+++ b/Documents/Design/Introduction.tex
@@ -51,7 +51,7 @@ Each of these components have their own requirements. The basic summary of each 
 	 \item Modify user information
 	 \item Modify user permissions
 	\end{itemize}
- \item Group Management*
+ \item Group Management\savefootnote{opt}{Optional}
 	\begin{itemize}
 	 \item Add groups
 	 \item Delete groups
@@ -70,7 +70,7 @@ Each of these components have their own requirements. The basic summary of each 
 	 		\item Rename
 	 		\item Change outlet association
 		\end{itemize}
-	 \item Device Groups*
+	 \item Device Groups\repeatfootnote{opt}
 		\begin{itemize}
 		 \item Device groups are logical groupings of Devices that can be 
 		 	viewed as a single Device in the View Data section
@@ -97,14 +97,14 @@ Each of these components have their own requirements. The basic summary of each 
 		 \item Shows the user power consumption over a specified range of time
 		 \item Includes total and per-device power consumption
 		\end{itemize}
-	 \item View Device Cost Over Time*
+	 \item View Device Cost Over Time\repeatfootnote{opt}
 		\begin{itemize}
 		 \item Shows the user the cost to run a device, or group of devices, over a specified time range
 		 \item Shows the user a comparison of device costs over a specified range with a given interval
 		 \item E.g. Show them the device cost every month for the past year
 		\end{itemize}
 	\end{itemize}
- \item Power Bill Guesstimator*
+ \item Power Bill Guesstimator\repeatfootnote{opt}
 	\begin{itemize}
 	 \item View cost to run a specified device over a period of time in the future
 	 \item View cost to run multiple devices over a period of time
@@ -117,7 +117,7 @@ Each of these components have their own requirements. The basic summary of each 
 		 	the first 500 kW/hrs, and \$0.10 after that
 		\end{itemize}
 	\end{itemize}
- \item Factory reset*
+ \item Factory reset\repeatfootnote{opt}
 	\begin{itemize}
 	 \item Allow the user to reset the system to default settings via...
 		\begin{itemize}
@@ -125,7 +125,7 @@ Each of these components have their own requirements. The basic summary of each 
 		 \item A physical button located on the server
 		\end{itemize}
 	\end{itemize}
- \item Software upgrade*
+ \item Software upgrade\repeatfootnote{opt}
 	\begin{itemize}
 	 \item Allow the user to upgrade the system to the newest software version
 	\end{itemize}
