--- a/Documents/Design/Software/Backend-REST.tex
+++ b/Documents/Design/Software/Backend-REST.tex
@@ -16,7 +16,8 @@ The REST API will be activated by the Django chain when a request comes in for t
 
 Having each module register itself when the system launches should work, but there may be a problem with things getting registered twice.
 Early experiments indicate that the \_\_init\_\_.py file is called twice during the loading of the system.
-This could be solved a number of ways, or it might not even be a problem (it's very possible the first time the module is loaded it is just being checked for syntax and compiled, then the program is restarting with the compiled files).
+This could be solved a number of ways, or it might not even be a problem. 
+It's very possible the first time the module is loaded it is just being checked for syntax and compiled, then the program is restarting with the compiled files).
 
 \subsubsection{Data Flow}
 
@@ -34,7 +35,7 @@ This could be problematic because we don't know a lot about the implementation o
 
 The good news is that django-tastypie is well supported by the community, and source code is liberally commented.
 It follows Python commenting standards, and should be fairly easy to navigate.
-In addition, members of our team have already used tastypie for projects in both work and the garage.
+In addition, members of our team have already used tastypie for projects in both work and recreationally.
 
 The most problematic bit about using tastypie for the initial run-through is the compatibility problems it has with Backbone.js.
 However, the community has developed an addition to Backbone to help deal with this.
